--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,10 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+        bind:
+            $omdbToken: 28c5b7b1
+            $omdbHost: 'https://www.omdbapi.com'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
