--- a/.env
+++ b/.env
@@ -26,3 +26,6 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 #DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+OMDB_TOKEN="28c5b7b1"
+OMDB_HOST="https://www.omdbapi.com"
