--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,9 +11,9 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-        bind:
-            $omdbToken: 28c5b7b1
-            $omdbHost: 'https://www.omdbapi.com'
+#        bind:
+#            $omdbToken: 28c5b7b1
+#            $omdbHost: 'https://www.omdbapi.com'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -27,3 +27,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Helper\OmdbApi:
+        arguments:
+#            $omdbClient: '@Symfony\Contracts\HttpClient\HttpClientInterface'
+            $omdbToken: '%env(string:OMDB_TOKEN)%'
+            $omdbHost: '%env(string:OMDB_HOST)%'
