--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,9 +26,22 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+            form_login:
+                provider: app_user_provider
+                check_path: /login
+                username_parameter: _email
+                default_target_path: /?login=success
+            logout:
+                path: auth.logout
+            # If you don't want to edit anything, this will be enough
+            # logout: ~
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/movie/latest, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_USER:
+            - ROLE_MOVIE_SHOW
+            - ROLE_MOVIE_IMPORT
